# ast_parser

./: .gitignore  .gitmodules  Cargo.toml
.cargo/: config.toml
src/: error.rs  lib.rs
src/ast_descriptor/: mod.rs
src/ast_framework/: foundry.rs  mod.rs  solc.rs
src/ast_serialize/: mod.rs
src/ast_specs/: mod.rs  node_type.rs  prelude.rs  source_unit.rs
src/ast_specs/base_nodes/: event_definition.rs  mod.rs  modifier_definition.rs  prelude.rs
src/ast_specs/common/: block.rs  identifier_path.rs  inheritance_specifier.rs  mod.rs  modifier_invocation.rs  override_specifier.rs  parameter_list.rs  prelude.rs  structured_documentation.rs  type_descriptions.rs  type_name.rs
src/ast_specs/directives/: contract_definition.rs  enum_definition.rs  error_definition.rs  function_definition.rs  import_directive.rs  mod.rs  pragma_directive.rs  prelude.rs  struct_definition.rs  user_defined_value_type_definition.rs  using_for_direcrive.rs  variable_declaration.rs
src/ast_specs/expressions/: assignment.rs  binary_operation.rs  conditional.rs  elementary_type_name_expression.rs  function_call.rs  function_call_options.rs  identifier.rs  index_access.rs  index_range_access.rs  literal.rs  member_access.rs  mod.rs  new_expression.rs  prelude.rs  tuple_expression.rs  unary_operation.rs
src/ast_specs/inline_assembly/: mod.rs  yul_assignment.rs  yul_block.rs  yul_continue.rs  yul_expression_statement.rs  yul_for_loop.rs  yul_if.rs  (+6 more)
src/ast_visitor/: mod.rs
src/simplified/: mod.rs
src/utils/: convert_enums.rs  mod.rs  ref_enums.rs
src/zero_cost/: convers.rs  mod.rs
(+42 files in other folders)
