[package]
name = "ast_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.15"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = { version = "1.0.122", features = ["preserve_order"] }
getters = {git = "https://github.com/PFAhard/getters.git", branch = "master"}